--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
 body {
-  background-color: brown;
-  color: #ffffff;
-  font-size: 24px;
+  background-color: #fff;
+}
+
+h1 {
+  color: rgb(52, 73, 94);
+  transition: color 0.4s ease-in-out;
+}
+
+.clicked {
+  color: #7f8c8d;
+}
+
+.btn {
+  pointer: cursor;
 }
